# philsol

./: README.md  example_build.py  example_image.py  main.py  philsol.py  pyproject.toml  setup.py
examples/: Boundary Interpolation Example.ipynb  Example KTP waveguide .ipynb  Fibre_Bend.ipynb  Hollow_Core_Fibre.ipynb  Log_Fibres.ipynb  example_KTP_waveguide.ipynb  example_build.py  example_image.py  microstrip.py
philsol/: __init__.py  classy.py  construct.py  core.py  solve.py
philsol/cuda/: cusolver.py  cusolver_complex.py  solve.py
